[angular.json] added bootstrap 4 to styles, [header, main-content.html] added frame things

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,3 +1,14 @@
-<p>
-  main-content works!
-</p>
+<h2> His Name is:  {{ hero.name | uppercase }}</h2>
+<div><span>id: </span>{{ hero.id }}</div>
+<h2> {{ hero.name }} </h2>
+
+<h3>Objective</h3>
+<p>This page will serve as a home for my job seeking and tool for personal projects and maintenince </p>
+
+<h3>Instructions</h3>
+<p>Select above links to my various profiles or repo's for updated content</p>
+
+<h3>Blog</h3>
+<p>Lately I've been working on putting my common commanding I've used to setup my servers or desktops on github/gitlab. <br /> However I've found
+    that searching for a specific issue when im trouble shooting has become a three step find. I do like the UI for github, and sometimes gitlab this becomes tideous.
+    my goal with this site will be to list all projects and their commands on my personal blog for [MY] reference. Of course have it avaliable to others :)</p>
